# dicom-lens

./: .gitignore  README.md  analyse.py  main.py  pyproject.toml  transform2jpg.py
prompts/: image_analysis.txt  summary.txt
